Añadido sistema multilingüe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,17 @@ project(SaturnControl LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Network Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core Network Widgets LinguistTools)
 
 # IMPORTANTE: AUTORCC debe estar en ON para procesar las imágenes
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON) 
+
+# Archivos de traducción
+set(TS_FILES
+    translations/saturn_es.ts
+)
 
 # Archivos fuente (Añadimos resources.qrc al final)
 set(SOURCES
@@ -27,5 +32,7 @@ set(HEADERS
 )
 
 add_executable(SaturnControl ${SOURCES} ${HEADERS})
+
+qt_add_translations(SaturnControl TS_FILES ${TS_FILES})
 
 target_link_libraries(SaturnControl PRIVATE Qt6::Core Qt6::Network Qt6::Widgets)
