--- a/release.yml
+++ b/release.yml
@@ -41,14 +41,14 @@ jobs:
           mkdir -p build/translations
           cp build/translations/*.qm build/
           # Ejecutar linuxdeployqt
-          ./linuxdeployqt-continuous-x86_64.AppImage build/SaturnControl -appimage -bundle-non-qt-libs
+          ./linuxdeployqt-continuous-x86_64.AppImage build/ElegooRemoteControl -appimage -bundle-non-qt-libs
 
       - name: Upload AppImage to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./SaturnControl-x86_64.AppImage
-          asset_name: SaturnControl-Linux-x86_64.AppImage
+          asset_path: ./ElegooRemoteControl-x86_64.AppImage
+          asset_name: ElegooRemoteControl-Linux-x86_64.AppImage
           asset_content_type: application/x-appimage
 
   build-windows:
@@ -78,20 +78,20 @@ jobs:
           # Crear un directorio para el paquete
           mkdir release
           # Copiar el ejecutable
-          cp build/Release/SaturnControl.exe release/
+          cp build/Release/ElegooRemoteControl.exe release/
           # Copiar las traducciones
           cp -r build/translations release/
           # Usar windeployqt para copiar todas las DLLs de Qt necesarias
-          windeployqt.exe --release --dir release release/SaturnControl.exe
+          windeployqt.exe --release --dir release release/ElegooRemoteControl.exe
           # Crear un archivo ZIP
-          7z a -tzip SaturnControl-Windows-x64.zip ./release/*
+          7z a -tzip ElegooRemoteControl-Windows-x64.zip ./release/*
 
       - name: Upload Windows ZIP to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./SaturnControl-Windows-x64.zip
-          asset_name: SaturnControl-Windows-x64.zip
+          asset_path: ./ElegooRemoteControl-Windows-x64.zip
+          asset_name: ElegooRemoteControl-Windows-x64.zip
           asset_content_type: application/zip
 
   build-macos:
@@ -116,14 +116,14 @@ jobs:
         run: cmake --build build --config Release --parallel
 
       - name: Package macOS build
-        run: macdeployqt build/SaturnControl.app -dmg
+        run: macdeployqt build/ElegooRemoteControl.app -dmg
 
       - name: Upload macOS DMG to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: build/SaturnControl.dmg
-          asset_name: SaturnControl-macOS.dmg
+          asset_path: build/ElegooRemoteControl.dmg
+          asset_name: ElegooRemoteControl-macOS.dmg
           asset_content_type: application/x-apple-diskimage
 
 ```
