--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,10 @@ jobs:
         uses: jurplel/install-qt-action@v3
         with:
           version: '6.5.3'
+          arch: 'gcc_64'
           modules: 'qtbase qttools'
           aqt-tool-concurrency: '4'
-
+          
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
@@ -65,7 +66,6 @@ jobs:
           host: 'windows'
           target: 'desktop'
           arch: 'win64_msvc2019_64'
-          aqt-tool-concurrency: '4'
 
       - name: Configure CMake
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release
@@ -80,7 +80,8 @@ jobs:
           # Copiar el ejecutable
           cp build/Release/ElegooRemoteControl.exe release/
           # Copiar las traducciones
-          cp -r build/translations release/
+          mkdir release/translations
+          cp build/Release/saturn_es.qm release/translations/
           # Usar windeployqt para copiar todas las DLLs de Qt necesarias
           windeployqt.exe --release --dir release release/ElegooRemoteControl.exe
           # Crear un archivo ZIP
@@ -107,7 +108,6 @@ jobs:
           version: '6.5.3'
           host: 'mac'
           target: 'desktop'
-          aqt-tool-concurrency: '4'
 
       - name: Configure CMake
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release
