--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,33 +21,39 @@ build_linux:
     - export PATH=/opt/qt/6.4.0/gcc_64/bin:$PATH
     - export Qt6_DIR=/opt/qt/6.4.0/gcc_64
   script:
-    # 1. Configuración de CMake (ESTO ES LO QUE FALTABA)
+    # 1. Configuración y Compilación (Igual que antes)
     - mkdir -p build
     - cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-    
-    # 2. Compilación
     - cmake --build build --config Release
     
-    # 3. Preparación de ficheros .desktop e icono
+    # 2. Preparación de ficheros (Igual que antes)
     - if [ -f packaging/default.desktop.in ]; then envsubst < packaging/default.desktop.in > build/default.desktop; else cp packaging/default.desktop build/default.desktop; fi
     - cp packaging/elegoo-remote-control.png build/elegoo-remote-control.png
     
-    # [IMPORTANTE] Definimos la versión para que linuxdeployqt sepa nombrar el archivo
-    - export VERSION=$(git describe --tags --always || echo "v0.0.0")
-    
-    # Descarga y extracción (igual que antes)
+    # 3. [DIAGNÓSTICO] Verificamos que el ejecutable está sano
+    - echo "--- DIAGNÓSTICO DE LIBRERÍAS ---"
+    - ldd build/ElegooRemoteControl
+    - echo "--------------------------------"
+
+    # 4. Descarga y extracción de LinuxDeployQt
     - wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt.AppImage
     - chmod a+x linuxdeployqt.AppImage
     - ./linuxdeployqt.AppImage --appimage-extract
     - chmod a+x ${CI_PROJECT_DIR}/squashfs-root/usr/bin/linuxdeployqt
 
+    # 5. Entramos a build
     - cd build
     
-    # Ejecutamos con -qmake explícito y verbose
-    - echo "Generando AppImage versión $VERSION..."
-    - ${CI_PROJECT_DIR}/squashfs-root/usr/bin/linuxdeployqt default.desktop -appimage -unsupported-allow-new-glibc -qmake=/opt/qt/6.4.0/gcc_64/bin/qmake -verbose=2
+    # 6. Definimos la versión
+    - export VERSION=$(git describe --tags --always || echo "v0.0.0")
     
-    # Movemos el resultado (el nombre ahora incluirá la versión, usamos * comodín por si acaso)
+    # 7. GENERACIÓN DEL APPIMAGE (¡Con el truco 'offscreen'!)
+    - echo "Generando AppImage versión $VERSION..."
+    
+    # AÑADIMOS 'QT_QPA_PLATFORM=offscreen' AL PRINCIPIO DEL COMANDO
+    - QT_QPA_PLATFORM=offscreen ${CI_PROJECT_DIR}/squashfs-root/usr/bin/linuxdeployqt default.desktop -appimage -unsupported-allow-new-glibc -qmake=/opt/qt/6.4.0/gcc_64/bin/qmake -verbose=2
+    
+    # 8. Renombrar
     - mv ElegooRemoteControl*.AppImage ElegooRemoteControl-linux-x86_64.AppImage
   artifacts:
     paths:
