--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build_linux:
   before_script:
     - apt-get update
     # Añadimos libnss3 y libasound2 a la lista
-    - apt-get install -y build-essential cmake git python3-pip wget file gettext-base patchelf libfuse2 libgl1-mesa-dev libxkbcommon-x11-0 libegl1-mesa libfontconfig1 libdbus-1-3 libglib2.0-0 libxcb-cursor0 libxcb-icccm4 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0 libxcb-sync1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-dev libnss3 libasound2
+    - apt-get install -y build-essential cmake git python3-pip wget file gettext-base patchelf libfuse2 libgl1-mesa-dev libxkbcommon-x11-0 libegl1-mesa libfontconfig1 libdbus-1-3 libglib2.0-0 libxcb-cursor0 libxcb-icccm4 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0 libxcb-sync1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-dev libnss3 libasound2 fuse
     - pip3 install aqtinstall
     - aqt install-qt linux desktop 6.4.0 gcc_64 --outputdir /opt/qt
     - export PATH=/opt/qt/6.4.0/gcc_64/bin:$PATH
@@ -37,19 +37,23 @@ build_linux:
     - wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt.AppImage
     - chmod a+x linuxdeployqt.AppImage
     
-    # [IMPORTANTE] NO EXTRAER. Ejecutar directamente.
-    # El flag --appimage-extract-and-run es un truco por si FUSE falla, 
-    # pero intenta usar FUSE primero.
-    
+    # 5. Generar AppImage (LA MAGIA ESTÁ AQUÍ)
     - cd build
-    
-    # 5. Generar AppImage (Igual que en GitHub + parámetros extra)
     - echo "Generando AppImage versión $VERSION..."
     
-    # Usamos ruta absoluta al AppImage descargado arriba
-    - QT_QPA_PLATFORM=offscreen ${CI_PROJECT_DIR}/linuxdeployqt.AppImage default.desktop -appimage -unsupported-allow-new-glibc -qmake=/opt/qt/6.4.0/gcc_64/bin/qmake -verbose=2
+    # Eliminamos variables que confunden a la herramienta (Conflictos Qt5 vs Qt6)
+    - unset QT_PLUGIN_PATH
+    - unset LD_LIBRARY_PATH
+    - unset QML2_IMPORT_PATH
     
-    # 6. Renombrar
+    # Ejecutamos:
+    # 1. QT_QPA_PLATFORM=offscreen : Para no buscar monitor
+    # 2. --appimage-extract-and-run : Para evitar problemas de FUSE
+    # 3. -qmake=... : Para decirle dónde está TU Qt6 real
+    
+    - QT_QPA_PLATFORM=offscreen ${CI_PROJECT_DIR}/linuxdeployqt.AppImage default.desktop -appimage -unsupported-allow-new-glibc --appimage-extract-and-run -qmake=/opt/qt/6.4.0/gcc_64/bin/qmake -verbose=2
+    
+    # 6. Renombrar y mover
     - mv ElegooRemoteControl*.AppImage ElegooRemoteControl-linux-x86_64.AppImage
   artifacts:
     paths:
