--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,73 +7,64 @@ variables:
   QT_VERSION: "6.4.0"
 
 # 2. Local Job
+# 2. Local Job
 build_linux:
   stage: build
   image: ubuntu:22.04
   rules:
-    - if: $CI_COMMIT_TAG # Compile only Release
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH
   before_script:
     - apt-get update
-    # Instalamos dependencias incluyendo strace y file
-    - apt-get install -y build-essential cmake git python3-pip wget file gettext-base patchelf libfuse2 libgl1-mesa-dev libxkbcommon-x11-0 libegl1-mesa libfontconfig1 libdbus-1-3 libglib2.0-0 libxcb-cursor0 libxcb-icccm4 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0 libxcb-sync1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-dev libnss3 libasound2 fuse desktop-file-utils strace
+    # Dependencias: Mantenemos las mismas porque son necesarias para Qt y la compilación
+    - apt-get install -y build-essential cmake git python3-pip wget file gettext-base patchelf libfuse2 libgl1-mesa-dev libxkbcommon-x11-0 libegl1-mesa libfontconfig1 libdbus-1-3 libglib2.0-0 libxcb-cursor0 libxcb-icccm4 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-shape0 libxcb-sync1 libxcb-xfixes0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-dev libnss3 libasound2 fuse desktop-file-utils
     - pip3 install aqtinstall
     - aqt install-qt linux desktop 6.4.0 gcc_64 --outputdir /opt/qt
+    # IMPORTANTE: Definimos las variables para que el nuevo plugin encuentre Qt
     - export PATH=/opt/qt/6.4.0/gcc_64/bin:$PATH
     - export Qt6_DIR=/opt/qt/6.4.0/gcc_64
+    - export QMAKE=/opt/qt/6.4.0/gcc_64/bin/qmake
   script:
-    # 1. Configuración y Compilación
+    # 1. Configuración y Compilación (Igual que antes)
     - mkdir -p build
     - cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
     - cmake --build build --config Release
     
-    # 2. Preparar iconos (Entrecomillado para evitar errores de sintaxis)
+    # 2. Preparar iconos y .desktop
     - 'if [ -f packaging/default.desktop.in ]; then envsubst < packaging/default.desktop.in > build/default.desktop; else cp packaging/default.desktop build/default.desktop; fi'
     - cp packaging/elegoo-remote-control.png build/elegoo-remote-control.png
     
-    # 3. Descargar herramientas
-    - 'wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt.AppImage'
-    - 'wget -c -nv "https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage" -O appimagetool.AppImage'
-    - chmod a+x linuxdeployqt.AppImage appimagetool.AppImage
+    # 3. Descargar la NUEVA herramienta (linuxdeploy + plugin qt)
+    # linuxdeploy: El orquestador
+    - 'wget -c -nv "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage" -O linuxdeploy.AppImage'
+    # plugin-qt: El especialista en Qt (funciona con Qt6)
+    - 'wget -c -nv "https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage" -O linuxdeploy-plugin-qt.AppImage'
+    - chmod a+x linuxdeploy.AppImage linuxdeploy-plugin-qt.AppImage
     
-    # 4. Preparación de entorno
-    - export VERSION=$(git describe --tags --always || echo "v0.0.0")
+    # 4. Generar AppImage
     - cd build
-    - echo "Generando AppDir para version $VERSION..."
+    - export VERSION=$(git describe --tags --always || echo "v0.0.0")
+    - echo "Generando AppImage con linuxdeploy (Moderno) para versión $VERSION..."
     
-    # Variables críticas
-    - unset QT_PLUGIN_PATH
-    - unset LD_LIBRARY_PATH
-    - unset QML2_IMPORT_PATH
+    # Variables de entorno para que linuxdeploy no use FUSE
     - export APPIMAGE_EXTRACT_AND_RUN=1
-    - export NO_STRIP=1
     
-    # ---------------------------------------------------------
-    # PASO A: Solo Bundling (Copiar librerías a ./AppDir)
-    # ---------------------------------------------------------
-    # NOTA: He entrecomillado toda la línea del comando strace para evitar el error de YAML
-    - echo "Ejecutando linuxdeployqt (Fase BUNDLE)..."
-    - 'strace -f -s 2000 -o trace_bundle.txt ${CI_PROJECT_DIR}/linuxdeployqt.AppImage default.desktop -bundle-non-qt-libs -no-strip -unsupported-allow-new-glibc -qmake=/opt/qt/6.4.0/gcc_64/bin/qmake -verbose=2'
+    # EJECUCIÓN MAESTRA:
+    # --appdir AppDir: Crea la carpeta
+    # -d: Archivo desktop
+    # -i: Icono
+    # -e: Ejecutable compilado
+    # -p qt: Usa el plugin de Qt (busca qmake automáticamente por la variable $QMAKE exportada arriba)
+    # --output appimage: Genera el archivo final
+    - ../linuxdeploy.AppImage --appdir AppDir -d default.desktop -i elegoo-remote-control.png -e ElegooRemoteControl -p qt --output appimage
     
-    # Verificación intermedia (Entrecomillado por los dos puntos en el echo)
-    - 'if [ ! -d "AppDir" ]; then echo "CRITICAL: No se creó el directorio AppDir. Falló linuxdeployqt."; exit 1; fi'
-    
-    - echo "Bundle completado. Contenido de AppDir:"
-    - ls -R AppDir | head -n 20
-    
-    # ---------------------------------------------------------
-    # PASO B: Empaquetado final (Convertir ./AppDir en .AppImage)
-    # ---------------------------------------------------------
-    - echo "Ejecutando appimagetool (Fase PACKAGE)..."
-    - '${CI_PROJECT_DIR}/appimagetool.AppImage AppDir ElegooRemoteControl-linux-x86_64.AppImage'
-    
-    # 6. Validar resultado
-    - ls -lh *.AppImage
+    # 5. Renombrar y mover
+    - mv ElegooRemoteControl*.AppImage ElegooRemoteControl-linux-x86_64.AppImage
     
   artifacts:
     when: always
     paths:
       - build/ElegooRemoteControl-linux-x86_64.AppImage
-      - build/trace_bundle.txt
 
 # 3. Publish Gitlab
 create_gitlab_release:
