--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,4 +68,4 @@ create_gitlab_release:
     assets:
       links:
         - name: "Linux AppImage"
-          url: "${CI_PROJECT_URL}/-/jobs/${CI_JOB_ID}/artifacts/file/build/ElegooRemoteControl-linux-x86_64.AppImage"
+          url: "${CI_PROJECT_URL}/-/jobs/artifacts/${CI_COMMIT_TAG}/raw/build/ElegooRemoteControl-linux-x86_64.AppImage?job=build_linux"
